# udsplitter

./: Cargo.toml  readme  test.py
common/: Cargo.toml
common/src/: lib.rs
example/: client.json  server.json  xray.json
udsplitter/: Cargo.toml
udsplitter-client/: Cargo.toml
udsplitter-client/src/: lib.rs  main.rs
udsplitter-server/: Cargo.toml
udsplitter-server/src/: lib.rs  main.rs
udsplitter/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
