[workspace]
resolver = "2"
members = [ "udsplitter-client", "udsplitter-server", "utils"]

[workspace.package]
version = "0.4.0"

[workspace.dependencies]
tokio = { version = "^1.35", features = ["full"] }
socks5-server = "^0.10"
socks5-proto = "^0.4"

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
