[package]
name = "udsplitter-client"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
socks5-server = { workspace = true }
socks5-proto = { workspace = true }

serde = { workspace = true }

getrandom = "^0.2"
rand_core = "^0.6"
rand_pcg = "^0.3"

utils = { path = "../utils" }
