[package]
name = "udsplitter-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "*", features = ["full"] }
socks5-server = "*"
socks5-proto = "*"

serde = { version = "*", features = ["derive"] }
serde_json = "*"

common = {path = "../common"}