[package]
name = "udsplitter-server"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
socks5-server = { workspace = true }
socks5-proto = { workspace = true }

serde = { workspace = true }

utils = { path = "../utils" }
