[package]
name = "udsplitter"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
socks5-proto = { workspace = true }

rand = "^0.8"

udsplitter-client = { path = "../udsplitter-client" }
udsplitter-server = { path = "../udsplitter-server" }

utils = { path = "../utils" }
